# dartvm_embeding_example

./: .gitignore  CMakeLists.txt  README.md  hello.dart  main.cpp  pubspec.yaml
internal/cmake/: DartAppSupport.cmake
internal/native/: app_runtime.h  app_runtime_aot.cpp  app_runtime_jit_kernel.cpp  app_runtime_jit_source.cpp
lib/: main.dart
src/: main.cpp
